--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@ window.locale = "en";
     <title>Welcome to JustMarkets | Justmarkets</title>
         <!-- Optimize not configured -->
 
-    <link rel="stylesheet" media="all" href="https://justmarkets.com/assets/application-responsive-a41376d389b1944e7f8b73076d7777bf4645efdcade76ae22921ccb42c1605f5.css">
+    <link rel="stylesheet" media="all" href="/MasFX/oops.css">
     
 
-        <script async="async" src="https://justmarkets.com/assets/application-responsive-fc33acaab12e743d5bfe7ac67833297025219ec5889b108539c177cdd7e34505.js" type="text/javascript"></script>
+        <script async="async" src="/MasFX/responsive.js" type="text/javascript"></script>
 
     
     <script type="text/javascript">
