--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@ window.locale = "en";
     <title>Welcome to JustMarkets | Justmarkets</title>
         <!-- Optimize not configured -->
 
-    <link rel="stylesheet" media="all" href="/MasFX/oops.css">
+    <link rel="stylesheet" media="all" href="MasFX/oops.css">
     
 
-        <script async="async" src="/MasFX/responsive.js" type="text/javascript"></script>
+        <script async="async" src="MasFX/responsive.js" type="text/javascript"></script>
 
     
     <script type="text/javascript">
