--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ window.locale = "en";
         <!-- Optimize not configured -->
 
     <link rel="stylesheet" media="all" href="MainFX_files/application-responsive-8faca091a7fe97f35ec1304cf03a5e105145e.css">
-    
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 
         <script async="async" src="MainFX_files/application-responsive-a901956aab5eb3816dc66e04b461e475ffdd55.js" type="text/javascript"></script>
 
